.manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: endura-docs
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: endura-docs
