.manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endura-docs-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - docs.endura.aryzac.io
      secretName: docs.endura.aryzac.io
  rules:
    - host: docs.endura.aryzac.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: endura-docs
                port:
                  number: 3000
